--- a/basic-website/styles/styles.css
+++ b/basic-website/styles/styles.css
@@ -90,6 +90,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 1.5rem 2.5rem;
+    margin: auto;
 }
 
 .nav-bar img {
@@ -108,6 +109,7 @@
     align-items: center;
     gap: 2rem;
     padding: 8rem 1.5rem;
+    margin: auto;
 }
 
 .headline {
@@ -145,6 +147,7 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    margin: auto;
 }
 
 .feature-card {
@@ -196,6 +199,7 @@
     position: sticky;
     top: 0rem;
     z-index: 0;
+    margin: auto;
 }
 
 .footer-links {
